force-app/main/default/objects/API_Negative_List_Check_Result__c/API_Negative_List_Check_Result__c.object-meta.xml
<CustomObject>
    <label>API Negative List Check Result</label>
    <nameField>
        <label>API Negative List Check Result  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Negative List Check Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>