force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/address_note__c.field-meta.xml
<CustomField>
    <fullName>address_note__c</fullName>
    <label>address_note</label>
    <type>TextArea</type>
</CustomField>