force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/bank_account_number__c.field-meta.xml
<CustomField>
    <fullName>bank_account_number__c</fullName>
    <label>bank_account_number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>