force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/bank_name__c.field-meta.xml
<CustomField>
    <fullName>bank_name__c</fullName>
    <label>bank_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>