force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/blacklist_category__c.field-meta.xml
<CustomField>
    <fullName>blacklist_category__c</fullName>
    <label>blacklist_category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>