force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/check_type__c.field-meta.xml
<CustomField>
    <fullName>check_type__c</fullName>
    <label>check_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>