force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/classification__c.field-meta.xml
<CustomField>
    <fullName>classification__c</fullName>
    <label>classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>