force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>date_of_birth__c</fullName>
    <label>date_of_birth</label>
    <length>32</length>
    <type>Text</type>
</CustomField>