force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/home_phone_2__c.field-meta.xml
<CustomField>
    <fullName>home_phone_2__c</fullName>
    <label>home_phone_2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>