force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>