force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/id_notes__c.field-meta.xml
<CustomField>
    <fullName>id_notes__c</fullName>
    <label>id_notes</label>
    <type>TextArea</type>
</CustomField>