force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/id_type__c.field-meta.xml
<CustomField>
    <fullName>id_type__c</fullName>
    <label>id_type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>