force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/job_description_2__c.field-meta.xml
<CustomField>
    <fullName>job_description_2__c</fullName>
    <label>job_description_2</label>
    <type>TextArea</type>
</CustomField>