force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/negative_list_id__c.field-meta.xml
<CustomField>
    <fullName>negative_list_id__c</fullName>
    <label>negative_list_id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>