force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/ojk_date__c.field-meta.xml
<CustomField>
    <fullName>ojk_date__c</fullName>
    <label>ojk_date</label>
    <length>16</length>
    <type>Text</type>
</CustomField>