force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/other_information__c.field-meta.xml
<CustomField>
    <fullName>other_information__c</fullName>
    <label>other_information</label>
    <type>TextArea</type>
</CustomField>