force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/passport_number__c.field-meta.xml
<CustomField>
    <fullName>passport_number__c</fullName>
    <label>passport_number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>