force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/place_of_birth__c.field-meta.xml
<CustomField>
    <fullName>place_of_birth__c</fullName>
    <label>place_of_birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>