force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/process_id__c.field-meta.xml
<CustomField>
    <fullName>process_id__c</fullName>
    <label>process_id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>