force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <label>reason</label>
    <type>TextArea</type>
</CustomField>