force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/relationship_id__c.field-meta.xml
<CustomField>
    <fullName>relationship_id__c</fullName>
    <label>relationship_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>