force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/relationship_type__c.field-meta.xml
<CustomField>
    <fullName>relationship_type__c</fullName>
    <label>relationship_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>