force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/subdistrict__c.field-meta.xml
<CustomField>
    <fullName>subdistrict__c</fullName>
    <label>subdistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>