force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>