force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/valid_from__c.field-meta.xml
<CustomField>
    <fullName>valid_from__c</fullName>
    <label>valid_from</label>
    <length>32</length>
    <type>Text</type>
</CustomField>