force-app/main/default/objects/API_Negative_List_Check_Result__c/fields/zip_code__c.field-meta.xml
<CustomField>
    <fullName>zip_code__c</fullName>
    <label>zip_code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>